# taskonaut

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  logster.toml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260220_0001_create_tasks.py  20260221_0002_tool_call_retries_and_idempotency.py  20260221_0003_langgraph_state_tracking.py  20260222_0004_trace_and_span_ids.py  20260222_0005_audit_logs_and_policy.py
taskrunner/: __init__.py  api.py  cli.py  config.py  db.py  flows.py  log_config.py  metrics.py  models.py  policy.py  schemas.py  service.py  tool_registry.py  tools.py  tracing.py
tests/: test_api.py  test_cli.py  test_flows.py  test_log_config.py  test_policy.py  test_service.py  test_tools.py
